fix overflow on when scrollbar is focused on mobile

--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ body {
   background-color: var(--bg-colour);
   color: var(--text-colour);
   width: 100%;
+  overflow-x: hidden;
 }
 
 main {
@@ -456,6 +457,10 @@ footer ul {
   flex-direction: column;
   gap: 1rem;
   padding: 1rem 0 0 0;
+}
+
+footer hr {
+  margin: 1rem 0;
 }
 
 @media (max-width: 240mm) {
